--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,10 @@
 body {
     font-family: 'Arial', sans-serif;
+    background-color: #393E46;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color:#EEEEEE
 }
 
 header {
@@ -22,8 +24,22 @@ nav li {
     margin-right: 20px;
 }
 
+a:link {
+    color: #00ADB5;
+}
+
+a:visited {
+    color: #008d94;
+}
+
 main {
-    padding: 20px;
+    padding: 4vh 12vw;
+}
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
@@ -31,6 +47,15 @@ footer {
     color: #EEEEEE;
     padding: 10px;
     text-align: center;
+    margin-top: auto;
 }
 
+input {
+    margin-bottom: 0.5rem;
+}
+
+.galerie img {
+    width: 30vw;
+    padding-bottom: 1rem;
+}
 
