--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color:#EEEEEE
+    color:#EEEEEE;
+    font-size: 18px;
 }
 
 header {
@@ -17,11 +18,16 @@ header {
 nav ul {
     list-style-type: none;
     padding: 0;
+    font-size: large;
 }
 
 nav li {
-    display: inline;
+    display: inline-block;
     margin-right: 20px;
+}
+
+nav li a {
+    text-decoration: none;
 }
 
 a:link {
@@ -58,4 +64,45 @@ input {
     width: 30vw;
     padding-bottom: 1rem;
 }
+
+table {
+    border-collapse: collapse;
+    width: 50%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+iframe {
+    width: 40rem;
+    height: 30rem;
+}
+
+@media (max-width: 768px) { /* tablet */
+    body {
+      font-size: 16px;
+    }
+  }
+
+
+@media (max-width: 480px) { /* mobil */
+    body {
+      font-size: 14px;
+    }
+
+    iframe {
+        width: 20rem;
+        height: 15rem;
+    }
+
+    nav li {
+        min-width: 25%;
+        padding-bottom: 10px;
+        margin-right: 0;
+    }
+
+  }
 
